[gd_scene load_steps=4 format=3 uid="uid://chks8b2pnxohn"]

[ext_resource type="Script" path="res://Scripts/GeoffScripts/MainMenu/main_menu.gd" id="1_io3fj"]
[ext_resource type="FontFile" uid="uid://cjgtqv4nsp8pj" path="res://ascii-sector-16x16-tileset.ttf" id="2_5unqs"]
[ext_resource type="Texture2D" uid="uid://b456132frr8x0" path="res://Assets/GeoffAssets/pictureFrame.png" id="3_b2iwl"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_io3fj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Logo2" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5unqs")
theme_override_font_sizes/font_size = 48
text = "A Warm Home"

[node name="New" type="Button" parent="HBoxContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5unqs")
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="DayPick" type="Button" parent="HBoxContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5unqs")
theme_override_font_sizes/font_size = 32
text = "Day Select"

[node name="Options" type="Button" parent="HBoxContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5unqs")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5unqs")
theme_override_font_sizes/font_size = 16
text = "Developed by The MOM Ltd.
Made for KiwiJam2024"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Logo" type="TextureRect" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_b2iwl")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/New" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/DayPick" to="." method="_on_day_pick_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
